--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,9 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-body{
-  width: 100%;
-  height: 100vh;
-  padding: 10px;
-  background: linear-gradient(to bottom, #68EACC 0%, #497BE8 100%);
-}
-
-.inputField {
-  display: flex;
-  width: 100%;
-}
-
-input {
-  display: flex;
-  width: 80%;
-  height: 30px;
-  margin-top: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: white;  
-  border: 1px solid #ccc;
-  border-radius: 2px;
-}
-
-input[type=text] {
+.todo {
+  background-color: white;
   color: black;
-  padding-left: 5px;
-  font-size: medium ;
+  padding: 30px;
+  border-radius: 6px;
 }
-
-.inputField button{
-  margin-top: 10px;
-  width: 50px;
-  height: 41.8px;
-  border: none;
-  color: #fff;
-  margin-left: 5px;
-  font-size: 21px;
-  outline: none;
-  background: #8E49E8;
-  cursor: pointer;
-  border-radius: 3px;
-  margin-left: 20px;
-}
-
-header {  
+.container-search {
   display: flex;
-  color: black;
-  font-size: 30px;
-  font-weight: 600;
-}
-
-.wrapper {
-  background: #fff;
-  max-width: 400px;
-  width: 100%;
-  margin: 120px auto;
-  padding: 25px;
-  border-radius: 5px;
-}
-
-.todoList {
-  padding-left: 0px;
-}
-
-.todoList-task {
-  padding-left: 10px;
-  display: flex;
-  text-align: center;
-  background-color: rgba(242,242,242,255);
-  width: 97%;
-  height: 40px;
-  border-radius: 5px;
-  margin-bottom: 5px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-span {
-  color: black;
-  padding-top: 8px;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer button {
-  background: #8E49E8;
 }
