--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@
   color: black;
   padding: 30px;
   border-radius: 6px;
+  width: 30%;
 }
 .container-search {
   display: flex;
+  width: 100%;
+  margin-bottom: 20px;
 }
