--- a/src/components/ButtonIcon/index.css
+++ b/src/components/ButtonIcon/index.css
@@ -1,3 +1,13 @@
 .button-icon {
-  background-color: yellow;
+  background: #8E49E8;
+  width: 13%;
+  border: none;
+  border-radius: 4px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.icon-add {
+  color: white;
+  font-weight: bold;
 }
