--- a/src/components/Item/index.css
+++ b/src/components/Item/index.css
@@ -1,10 +1,9 @@
 .item-label {
-    padding-top: 20px;
     width: 100%;
     background-color: rgba(242,242,242,255);
-    margin-bottom: 5px;
-    display: flex;
+    padding: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border-radius: 3px;
-    align-items: center;
-    text-align: center;
+    display: flex;
 }
